--- a/views/user.ejs
+++ b/views/user.ejs
@@ -5,32 +5,66 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/frontend/user.css">
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <title>BitBliss</title>
     <style>
         #notifications {
-            width: 200px;
-            height: max-content;
-        }
-
-        #notifications {
             background-color: aliceblue;
-            width: 30px;
-            height: 30px;
+            color: black;
+            width: 25px;
+            height: 25px;
             cursor: pointer;
+            margin-top: 15px;
             border-radius: 50%;
         }
 
+        .backdrop {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.6);
+        }
+
         .blurred-div {
+            padding: 2%;
             position: absolute;
-            top: 35px;
-            left: 83%;
+            display: flex;
+            top: 40px;
+            flex-direction: column;
+            left: 81%;
             transform: translateX(-50%);
             border: solid 1px rgb(92, 92, 92);
             border-radius: 10px;
             width: 400px;
-            height: 400px;
-            background-color: rgba(255, 255, 255);
+            height: 600px;
+            background-color: rgba(48, 48, 48);
+        }
 
+        #acceptBtn {
+            background-color: #5cb85c;
+            color: #fff;
+            height: 40px;
+            margin-left: 10px;
+        }
+
+        #rejectBtn {
+            background-color: #d9534f;
+            color: #fff;
+            margin-left: 10px;
+            height: 40px;
+        }
+
+        #mainTitle {
+            color: white;
+        }
+
+        #notificationContainer {
+            color: white;
+            display: flex;
+            justify-content: space-between;
         }
     </style>
 </head>
@@ -42,7 +76,9 @@
         <input type="text" class="explore-bar" id="explore" placeholder="Explore..." />
         <button onclick="explore()">explore</button>
         <div>
-            <div id="notifications" onclick="notifications()"></div>
+            <div id="notifications" onclick="notifications()"><span class="material-symbols-outlined">
+                    circle_notifications
+                </span></div>
         </div>
 
     </div>
@@ -118,11 +154,7 @@
 
 
     socket.on("friendRequest", (data) => {
-        console.log("data");
-        console.log(data);
         const { userId } = data;
-        console.log(userId);
-        notifications(userId);
     });
 
     function loadNotifications() {
@@ -132,40 +164,86 @@
     loadNotifications();
 
     function notifications() {
-        const data = { username: userId };
+
         fetch("/notifications", {
             method: "POST",
             headers: {
                 "Content-Type": "application/json",
             },
-            body: JSON.stringify(data),
+            body: JSON.stringify({ username: userId }),
         })
             .then((response) => response.json())
             .then((data) => {
                 if (data.status === "success") {
+                    createNotificationContainer()
                     notify(data.friendRequests);
                 }
             })
             .catch((error) => {
                 console.error(error);
             });
+
     }
 
-    // notifications();
+    function createNotificationContainer() {
+        const backdrop = document.createElement('div');
+        backdrop.classList.add('backdrop');
+        backdrop.addEventListener('click', function (event) {
+            if (event.target === backdrop) {
+                backdrop.remove();
+                notificationsDiv.remove();
+            }
+        });
 
-    function notify(userId) {
-        const blurredDiv = document.createElement('div');
-        blurredDiv.classList.add('blurred-div');
-        document.body.appendChild(blurredDiv);
-        if (userId == null) {
-            blurredDiv.innerHTML = `<button  id="request" onclick="acceptRequest('${userId}')">Accept request from ${userId}</button>
-        <button id="request" onclick="rejectRequest('${userId}')">Reject</button>`;
-        } else {
-            blurredDiv.innerHTML = ``;
-        }
+        const notificationsDiv = document.createElement('div');
+        notificationsDiv.classList.add('blurred-div');
+
+        const mainTitle = document.createElement('h2');
+        mainTitle.setAttribute('id', 'mainTitle');
+        mainTitle.textContent = `Your Feed`;
+        notificationsDiv.appendChild(mainTitle);
+
+        document.body.appendChild(backdrop);
+        document.body.appendChild(notificationsDiv);
     }
+
+    function notify(userIds) {
+        const notificationsDiv = document.querySelector('.blurred-div')
+        userIds.forEach((userId) => {
+            const notificationContainer = document.createElement('div');
+            notificationContainer.setAttribute('id', 'notificationContainer')
+
+            if (userId) {
+                const title = document.createElement('h5');
+                title.setAttribute('id', 'title');
+                title.textContent = `Friend Request: `;
+                notificationContainer.appendChild(title);
+
+                const acceptBtn = document.createElement('button');
+                acceptBtn.setAttribute('id', 'acceptBtn');
+                acceptBtn.textContent = `Accept request from ${userId}`;
+                acceptBtn.addEventListener('click', function () {
+                    acceptRequest(userId);
+                });
+                notificationContainer.appendChild(acceptBtn);
+
+                const rejectBtn = document.createElement('button');
+                rejectBtn.setAttribute('id', 'rejectBtn');
+                rejectBtn.textContent = 'Reject';
+                rejectBtn.addEventListener('click', function () {
+                    rejectRequest(userId);
+                });
+                notificationContainer.appendChild(rejectBtn);
+            }
+
+            notificationsDiv.appendChild(notificationContainer);
+        });
+    }
+
 
     function acceptRequest(friendId) {
+        const notificationsDiv = document.querySelector('.blurred-div')
+        const backdrop = document.querySelector('.backdrop')
         const friendsListDiv = document.getElementById("notifications");
         const data = {
             userId: userId,
@@ -183,6 +261,9 @@
             .then((response) => response.json())
             .then((data) => {
                 if (data.status === "success") {
+                    backdrop.remove();
+                    notificationsDiv.remove();
+                    notifications()
                     friendsListDiv.innerHTML = ``;
                     loadFriends()
                 } else {
@@ -197,6 +278,8 @@
     }
 
     function rejectRequest(friendId) {
+        const notificationsDiv = document.querySelector('.blurred-div')
+        const backdrop = document.querySelector('.backdrop')
         const friendsListDiv = document.getElementById("notifications");
         const data = {
             userId: userId,
@@ -214,6 +297,9 @@
             .then((response) => response.json())
             .then((data) => {
                 if (data.status === "success") {
+                    backdrop.remove();
+                    notificationsDiv.remove();
+                    notifications()
                     friendsListDiv.innerHTML = ``;
                     loadFriends()
                 } else {
